--- a/tags.html
+++ b/tags.html
@@ -1,12 +1,12 @@
 <!DOCTYPE  html>
 <html>
     <head>
-        <title>Midori's Website</title>
+        <title>Tony's Website</title>
     </head>
     <body>
-        <h1>Midori's Website</h1>
+        <h1>Tony's Website</h1>
         <h2>About me</h2>
-        <p>A sentence about me here</p>
+        <p>I am a UW student</p>
 
         <h2>My Favourite Sites</h2>
         <ul>
