--- a/tags.html
+++ b/tags.html
@@ -1,12 +1,12 @@
 <!DOCTYPE  html>
 <html>
     <head>
-        <title>Tony's Website</title>
+        <title>Midori's Website</title>
     </head>
     <body>
-        <h1>Tony's Website</h1>
+        <h1>Midori's Website</h1>
         <h2>About me</h2>
-        <p>I am a UW student</p>
+        <p>A sentence about me here</p>
 
         <h2>My Favourite Sites</h2>
         <ul>
@@ -19,6 +19,9 @@
             <li>
                 <img src = "https://i.guim.co.uk/img/media/26392d05302e02f7bf4eb143bb84c8097d09144b/446_167_3683_2210/master/3683.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=49ed3252c0b2ffb49cf8b508892e452d"title="A cat" style="width:100px;height:100px;margin:5px">
             </li>
+            <a href="https://www.washington.edu/">
+                <img src = "https://i.guim.co.uk/img/media/26392d05302e02f7bf4eb143bb84c8097d09144b/446_167_3683_2210/master/3683.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=49ed3252c0b2ffb49cf8b508892e452d"title="A cat" style="width:100px;height:100px;margin:5px">
+            </a>
         </ul>
     </body>
 </html>
