--- a/tags.html
+++ b/tags.html
@@ -6,12 +6,12 @@
     <body>
         <h1>Midori's Website</h1>
         <h2>About me</h2>
-        <p>A sentence about me here</p>
+        <p>I am a UW student</p>
 
         <h2>My Favourite Sites</h2>
         <ul>
             <li>
-            <a><ahref = "https://www.w3schools.com/"></ahref></a>
+                <a href="https://www.washington.edu/">UW</a>
             </li>
         </ul>
         <h2>My Favourite Pictures</h2>
