--- a/tags.html
+++ b/tags.html
@@ -1,27 +1,28 @@
 <!DOCTYPE  html>
 <html>
     <head>
-        <title>Midori's Website</title>
+        <title>Midori's Website</title><cite>A creative website</cite>
     </head>
     <body>
-        <h1>Midori's Website</h1>
+        <h1>Tony's Website</h1>
         <h2>About me</h2>
         <p>I am a UW student</p>
 
-        <h2>My Favourite Sites</h2>
+        <h2>My Favourite Sites</h2><div>a list of sites</div>
         <ul>
             <li>
-                <a href="https://www.washington.edu/">UW</a>
+                <a href="https://www.washington.edu/">UW<button>The university of washington web page</button></a><dt>explore it</dt>
             </li>
         </ul>
         <h2>My Favourite Pictures</h2>
         <ul>
             <li>
                 <img src = "https://i.guim.co.uk/img/media/26392d05302e02f7bf4eb143bb84c8097d09144b/446_167_3683_2210/master/3683.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=49ed3252c0b2ffb49cf8b508892e452d"title="A cat" style="width:100px;height:100px;margin:5px">
-            </li>
+            </li><code>lead to the website</code>
             <a href="https://www.washington.edu/">
                 <img src = "https://i.guim.co.uk/img/media/26392d05302e02f7bf4eb143bb84c8097d09144b/446_167_3683_2210/master/3683.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=49ed3252c0b2ffb49cf8b508892e452d"title="A cat" style="width:100px;height:100px;margin:5px">
             </a>
         </ul>
     </body>
 </html>
+
