--- a/jobApplicationForm.html
+++ b/jobApplicationForm.html
@@ -205,7 +205,7 @@
 		</div>
 	</fieldset>
     <fieldset>
-        <legend>vaccination?</legend>
+        <legend>Vaccination</legend>
         <div class="field">
 			<label>Did you get your vaccination?</label> <br>
             <input type="radio" name="answer" value="yes"> Yes<br>
