--- a/myFunSite.html
+++ b/myFunSite.html
@@ -1,3 +1,4 @@
+<!--Only the first page are customized-->
 <!--click on nominee1, 2, 3 or select one to the navigation page-->
 <!DOCTYPE html>
 <html lang="en">
